# task5-django

./: README.md  pyproject.toml  shell.nix
src/: manage.py
src/superweb/: asgi.py  settings.py  urls.py  wsgi.py
